--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -1,7 +1,12 @@
+global:
+  scrape_interval: 1m
+
 scrape_configs:
   - job_name: 'prometheus'
+    scrape_interval: 1m
     static_configs:
-      - targets: ['prometheus:9090']
-  - job_name: 'node-exporter'
+      - targets: ['localhost:9090']
+
+  - job_name: 'node'
     static_configs:
-      - targets: ['node_exporter:9100']
+      - targets: ['node-exporter:9100']
