--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -8,5 +8,6 @@ scrape_configs:
       - targets: ['localhost:9090']
 
   - job_name: 'node'
+    scrape_interval: 5s
     static_configs:
       - targets: ['node-exporter:9100']
